--- a/Views/Shared/_LayoutAdmin.cshtml
+++ b/Views/Shared/_LayoutAdmin.cshtml
@@ -6,7 +6,7 @@
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
     <!-- Title -->
-    <title>Koki Laravel | Dashboard</title>
+    <title>Taste of recipe | Admin</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,7 +16,7 @@
     <meta name="keywords" content="	admin dashboard, admin template, administration, analytics, bootstrap, cafe admin, elegant, food, health, kitchen, modern, responsive admin dashboard, restaurant dashboard">
     <meta name="description" content="Some description for the page"/>
     <meta property="og:title" content="Koki - Restaurant Food Admin Dashboard Template">
-    <meta property="og:description" content="Koki Laravel | Dashboard" />
+    <meta property="og:description" />
     <meta property="og:image" content="../../xhtml/social-image.png">
     <meta name="format-detection" content="telephone=no">
 
@@ -661,7 +661,7 @@
                 <ul class="metismenu" id="menu">
                     <li>
                         <a class="has-arrow ai-icon" href="javascript:void()" aria-expanded="false">
-                            <i class="flaticon-dashboard-1"></i>
+                            <i class="flaticon-contract"></i>
                             <span class="nav-text">Recipe</span>
                         </a>
                         <ul aria-expanded="false">
@@ -678,45 +678,22 @@
                     </li>
                     <li>
                         <a class="has-arrow ai-icon" href="javascript:void()" aria-expanded="false">
-                        <i class="flaticon-app"></i>
+                        <i class="flaticon-content"></i>
                         <span class="nav-text">Contest</span>
                         </a>
                         <ul aria-expanded="false">
                             <li><a href="app-profile.html">Add new contest</a></li>
                             <li><a href="post-details.html">Contest details</a></li>
-                           @* <li><a class="has-arrow" href="javascript:void()" aria-expanded="false">Email</a>
-                                <ul aria-expanded="false">
-                                    <li><a href="email-compose.html">Compose</a></li>
-                                    <li><a href="email-inbox.html">Inbox</a></li>
-                                    <li><a href="email-read.html">Read</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="app-calender.html">Calendar</a></li>
-                            <li><a class="has-arrow" href="javascript:void()" aria-expanded="false">Shop</a>
-                                <ul aria-expanded="false">
-                                    <li><a href="ecom-product-grid.html">Product Grid</a></li>
-                                    <li><a href="ecom-product-list.html">Product List</a></li>
-                                    <li><a href="ecom-product-detail.html">Product Details</a></li>
-                                    <li><a href="ecom-product-order.html">Order</a></li>
-                                    <li><a href="ecom-checkout.html">Checkout</a></li>
-                                    <li><a href="ecom-invoice.html">Invoice</a></li>
-                                    <li><a href="ecom-customers.html">Customers</a></li>
-                                </ul>
-                            </li>*@
                         </ul>
                     </li>
                     <li>
                         <a class="has-arrow ai-icon" href="javascript:void()" aria-expanded="false">
-                            <i class="flaticon-bar-chart-1"></i>
+                            <i class="flaticon-star"></i>
                             <span class="nav-text">Feedback</span>
                         </a>
                         <ul aria-expanded="false">
-                            <li><a href="chart-flot.html">About web</a></li>
-                            <li><a href="chart-morris.html">About recipes</a></li>
-                            <@*li><a href="chart-chartjs.html">Chartjs</a></li>
-                            <li><a href="chart-chartist.html">Chartist</a></li>
-                            <li><a href="chart-sparkline.html">Sparkline</a></li>
-                            <li><a href="chart-peity.html">Peity</a></li>*@
+                            <li><a href="chart-flot.html">Feedback about web</a></li>
+                            <li><a href="chart-morris.html">Feedback about recipes</a></li>
                         </ul>
                     </li>
                     <li>
@@ -737,12 +714,6 @@
                         <ul aria-expanded="false">
                             <li><a href="uc-select2.html">Select 2</a></li>
                             <li><a href="uc-nestable.html">Nestedable</a></li>
-                            @*
-                            <li><a href="uc-noui-slider.html">Noui Slider</a></li>
-                            <li><a href="uc-sweetalert.html">Sweet Alert</a></li>
-                            <li><a href="uc-toastr.html">Toastr</a></li>
-                            <li><a href="map-jqvmap.html">Jqv Map</a></li>
-                            <li><a href="uc-lightgallery.html">Light Gallery</a></li>*@
                         </ul>
                     </li>
                 </ul>
