--- a/Views/Shared/_LayoutAdmin.cshtml
+++ b/Views/Shared/_LayoutAdmin.cshtml
@@ -692,8 +692,8 @@
                             <span class="nav-text">Feedback</span>
                         </a>
                         <ul aria-expanded="false">
-                            <li><a href="chart-flot.html">Feedback about web</a></li>
-                            <li><a href="chart-morris.html">Feedback about recipes</a></li>
+                            <li><a href="/Admin/FeedbackWeb">Feedback about web</a></li>
+                            <li><a href="/Admin/FeedbackRecipe">Feedback about recipes</a></li>
                         </ul>
                     </li>
                     <li>
