--- a/Views/Admin/FeedbackRecipe.cshtml
+++ b/Views/Admin/FeedbackRecipe.cshtml
@@ -2,24 +2,25 @@
 @inject IFeedBackRepository feedbackRepository;
 @{
 	Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
-	var feedbacks = await feedbackRepository.GetFeedbackByType("Web");
+	var feedbacks = await feedbackRepository.GetFeedbackByType("Recipe");
 }
 <div class="content-body ">
 	<!-- row -->
 	<div class="container-fluid mb-3">
 		<div class="me-auto d-none d-lg-block ">
 			<a class="text-primary d-flex align-items-center mb-3 font-w500" href="/Admin/Index">
-			<svg class="me-3" width="24" height="12" viewBox="0 0 24 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-				<path d="M0.274969 5.14888C0.27525 5.1486 0.275484 5.14827 0.275812 5.14799L5.17444 0.272997C5.54142 -0.0922061 6.135 -0.090847 6.5003 0.276184C6.86555 0.643168 6.86414 1.23675 6.49716 1.60199L3.20822 4.87499H23.0625C23.5803 4.87499 24 5.29471 24 5.81249C24 6.33027 23.5803 6.74999 23.0625 6.74999H3.20827L6.49711 10.023C6.86409 10.3882 6.8655 10.9818 6.50025 11.3488C6.13495 11.7159 5.54133 11.7171 5.17439 11.352L0.275764 6.47699C0.275483 6.47671 0.27525 6.47638 0.274921 6.4761C-0.0922505 6.10963 -0.0910778 5.51413 0.274969 5.14888Z" fill="#EA4989"/>
-			</svg>
-			Back</a>
+				<svg class="me-3" width="24" height="12" viewBox="0 0 24 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<path d="M0.274969 5.14888C0.27525 5.1486 0.275484 5.14827 0.275812 5.14799L5.17444 0.272997C5.54142 -0.0922061 6.135 -0.090847 6.5003 0.276184C6.86555 0.643168 6.86414 1.23675 6.49716 1.60199L3.20822 4.87499H23.0625C23.5803 4.87499 24 5.29471 24 5.81249C24 6.33027 23.5803 6.74999 23.0625 6.74999H3.20827L6.49711 10.023C6.86409 10.3882 6.8655 10.9818 6.50025 11.3488C6.13495 11.7159 5.54133 11.7171 5.17439 11.352L0.275764 6.47699C0.275483 6.47671 0.27525 6.47638 0.274921 6.4761C-0.0922505 6.10963 -0.0910778 5.51413 0.274969 5.14888Z" fill="#EA4989" />
+				</svg>
+				Back
+			</a>
 			<a class="mb-0 text-secondary fs-18 font-w500" href="">Feedback  /</a>
-			<a class="mb-0 font-w500 fs-18" href=""> Customer feedback website </a>
+			<a class="mb-0 font-w500 fs-18" href=""> Customer feedback feedback </a>
 		</div>
 		<div class="row">
 			<div class="col-xl-12">
 				<div class="card review-table p-0 border-0">
-					@foreach(var feedback in feedbacks)
+					@foreach (var feedback in feedbacks)
 					{
 						<div class="row align-items-center p-4  border-bottom">
 							<div class="col-xl-4 col-xxl-4 col-lg-5 col-md-12">
