--- a/Views/Admin/AddRecipe.cshtml
+++ b/Views/Admin/AddRecipe.cshtml
@@ -1,5 +1,10 @@
-﻿@{
+﻿@using Project3.Repository;
+@inject IIngerdientRepository ingredientRepository;
+@inject IRecipeRepository recipeRepository;
+@{
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+	var ingredients = await ingredientRepository.GetAllAsync();
+
 }
 <div class="content-body ">
 	<!-- row -->
@@ -20,7 +25,7 @@
 			</div>
 			<div class="card-body">
 				<div class="basic-form">
-					<form>
+					<form method="post" action="/Recipe/CreateRecipe">
 						<input type="hidden" name="_token" value="ML92rdCjbEmTftVXgNyoQXBHnoqjfV95zZ8HN7me">
 						<div class="row">
 							<div class="mb-3 col-md-4">
@@ -33,10 +38,9 @@
 							</div>
 						</div>
 						<div class="row">
-							
 							<div class="mb-3 col-md-4">
 								<label class="form-label">Recipe cuisine:</label>
-								<select id="inputState" class="default-select form-control wide">
+								<select name="cuisines" class="default-select form-control wide">
 									<option selected>VietNamese</option>
 									<option>Japanese</option>
 									<option>Chinese</option>
@@ -45,7 +49,7 @@
 					
 							<div class="mb-3 col-md-4">
 								<label class="form-label">Quantity served:</label>
-								<select id="inputState" class="default-select form-control wide">
+								<select name="servings" class="default-select form-control wide">
 									<option selected>1-3</option>
 									<option>3-5</option>
 									<option>5-7</option>
@@ -55,7 +59,7 @@
 							</div>
 							<div class="mb-3 col-md-4">
 								<label class="form-label">Cooking time:</label>
-								<select id="inputState" class="default-select form-control wide">
+								<select name="cookingTime" class="default-select form-control wide">
 									<option selected>00-15 min</option>
 									<option>15-30 min</option>
 									<option>30-60 min</option>
@@ -67,7 +71,7 @@
 						<div class="row">
 							<div class="mb-3 col-xl-8 col-lg-8">
 								<label class="form-label">Select recipe type(at least one):</label>
-								<select multiple class="default-select form-control wide ">
+								<select multiple class="default-select form-control wide " name="categoryId">
 									<option>1</option>
 									<option>2</option>
 									<option>3</option>
@@ -77,7 +81,7 @@
 							</div>
 							<div class="mb-3 col-md-4">
 								<label class="form-label">For:</label>
-								<select id="inputState" class="default-select form-control wide">
+								<select class="default-select form-control wide" name="isFree">
 									<option selected>Free user</option>
 									<option>Member of site</option>
 								</select>
@@ -106,14 +110,14 @@
 							<div class="col-md-4">
 								<div class="input-group mb-3">
 									<input type="text" class="form-control" placeholder="Enter quantity and unit">
-									<button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown">Ingredient</button>
-									<div class="dropdown-menu">
-										<a class="dropdown-item" href="#">Action</a>
-										<a class="dropdown-item" href="#">Another action</a>
-										<a class="dropdown-item" href="#">Something else here</a>
-										<div role="separator" class="dropdown-divider"></div>
-										<a class="dropdown-item" href="#">Separated link</a>
-									</div>
+@*									<button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown">Ingredient</button>*@
+									<select class="default-select form-control wide btn" name="i">
+										@foreach (var ingre in ingredients)
+										{
+											<option value="@ingre.Id">@ingre.Name</option>
+										}
+									</select>
+								
 								</div>
 								<div>
 									<button type="button" class="btn btn-rounded btn-primary">
