--- a/Views/Home/HomePage.cshtml
+++ b/Views/Home/HomePage.cshtml
@@ -36,13 +36,13 @@
 				<div class="elementor-element elementor-element-04555eb elementor-align-center elementor-widget elementor-widget-button" data-id="04555eb" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-lg" href="#">
+			@*<a class="elementor-button elementor-button-link elementor-size-lg" href="#">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon elementor-align-icon-right">
 				<i aria-hidden="true" class="material-icons md-restaurant_menu" data-md-icon="restaurant_menu"></i>			</span>
 						<span class="elementor-button-text">Explore Recipes</span>
 		</span>
-					</a>
+					</a>*@
 		</div>
 				</div>
 				</div>
