--- a/Views/Shared/_LayoutAdmin.cshtml
+++ b/Views/Shared/_LayoutAdmin.cshtml
@@ -15,7 +15,7 @@
     <meta name="csrf-token" content="ML92rdCjbEmTftVXgNyoQXBHnoqjfV95zZ8HN7me">
     <meta name="keywords" content="	admin dashboard, admin template, administration, analytics, bootstrap, cafe admin, elegant, food, health, kitchen, modern, responsive admin dashboard, restaurant dashboard">
     <meta name="description" content="Some description for the page"/>
-    <meta property="og:title" content="Koki - Restaurant Food Admin Dashboard Template">
+    <meta property="og:title" content="Taste of recipe - Restaurant Food Admin Dashboard Template">
     <meta property="og:description" />
     <meta property="og:image" content="../../xhtml/social-image.png">
     <meta name="format-detection" content="telephone=no">
@@ -28,6 +28,11 @@
     <link href="~/vendor/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet" type="text/css"/>
     <link href="~/2.0/LineIcons.css" rel="stylesheet" type="text/css"/>
     <link href="~/css/style.css" rel="stylesheet" type="text/css"/>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js" ></script>
+     @await RenderSectionAsync("Script", required: false)
+    <!-- Required vendors -->
+    
 </head>
 <body>
 
@@ -43,11 +48,12 @@
     </div>
     <div id="main-wrapper">
         <div class="nav-header">
-            <a href="index-2.html" class="brand-logo">
+            @*logo*@
+            @*  <a href="index-2.html" class="brand-logo">
                 <img class="logo-abbr" src="~/images/logo-text2.png" alt="">
                 <img class="logo-compact" src="~/images/logo-text.png" alt="">
                 <img class="brand-title" src="~/images/logo-text.png" alt="">
-            </a>
+            </a>*@
             <div class="nav-control">
                 <div class="hamburger">
                     <span class="line"></span><span class="line"></span><span class="line"></span>
@@ -723,7 +729,7 @@
                     <a class="btn bg-white text-black btn-rounded d-block" href="javascript:;">+Add Menus</a>
                 </div>
                 <div class="copyright">
-                    <p class="fs-14 font-w200"><strong class="font-w400">Koki Restaurant Admin Dashboard</strong> © 2023 All Rights Reserved</p>
+                    <p class="fs-14 font-w200"><strong class="font-w400">Taste of recipe</strong> © 2023 All Rights Reserved</p>
                     <p>Made with <span class="heart"></span> by DexignZone</p>
                 </div>
             </div>
@@ -737,8 +743,6 @@
             </div>
         </div>       
     </div>
-
-    <!-- Required vendors -->
     <script src="~/vendor/global/global.min.js" type="text/javascript"></script>
     <script src="~/vendor/bootstrap-select/dist/js/bootstrap-select.min.js" type="text/javascript"></script>
     <script src="~/vendor/chart-js/chart.bundle.min.js" type="text/javascript"></script>
@@ -747,7 +751,9 @@
     <script src="~/js/custom.min.js" type="text/javascript"></script>
     <script src="~/js/deznav-init.js" type="text/javascript"></script>
 
+   
 </body>
+
 
 <!-- Mirrored from koki.dexignzone.com/laravel/demo/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 29 Aug 2023 04:13:58 GMT -->
 </html>
