--- a/Views/Shared/_LayoutAdmin.cshtml
+++ b/Views/Shared/_LayoutAdmin.cshtml
@@ -28,9 +28,7 @@
     <link href="~/vendor/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet" type="text/css"/>
     <link href="~/2.0/LineIcons.css" rel="stylesheet" type="text/css"/>
     <link href="~/css/style.css" rel="stylesheet" type="text/css"/>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js" ></script>
-     @await RenderSectionAsync("Script", required: false)
+
     <!-- Required vendors -->
     
 </head>
@@ -738,9 +736,9 @@
             @RenderBody()
         </div>
         <div class="footer">
-            <div class="copyright">
+          @*  <div class="copyright">
                 <p>Copyright © Designed &amp; Developed by <a href="http://dexignzone.com/" target="_blank">DexignZone</a> 2023</p>
-            </div>
+            </div>*@
         </div>       
     </div>
     <script src="~/vendor/global/global.min.js" type="text/javascript"></script>
@@ -750,8 +748,11 @@
     <script src="~/js/dashboard/dashboard-1.js" type="text/javascript"></script>
     <script src="~/js/custom.min.js" type="text/javascript"></script>
     <script src="~/js/deznav-init.js" type="text/javascript"></script>
-
-   
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="~/vendor/select2/css/select2.min.css"rel="stylesheet" />
+    <script src="~/vendor/select2/js/select2.full.min.js"></script>
+     @await RenderSectionAsync("Script", required: false)
 </body>
 
 
