--- a/Views/Admin/AddRecipe.cshtml
+++ b/Views/Admin/AddRecipe.cshtml
@@ -3,7 +3,7 @@
 @inject IRecipeRepository recipeRepository;
 @{
 	Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
-	var ingredients = await ingredientRepository.SortNameByASC(); ;
+	var ingredients = await ingredientRepository.SortNameByASC();
 
 }
 
@@ -83,8 +83,8 @@
 							<div class="mb-3 col-md-4">
 								<label class="form-label">For:</label>
 								<select class="default-select form-control wide" name="isFree">
-									<option selected >Free user</option>
-									<option>Member of site</option>
+									<option selected value="1" >Free user</option>
+									<option value="0">Member of site</option>
 								</select>
 							</div>
 						</div>
@@ -108,22 +108,22 @@
 						</div>
 						<div class="row">
 							<div class="col-md-4" id="container">
-								<div class="input-group mb-3">
-									<input type="text" class="form-control" placeholder="Enter quantity and unit" name="quantity">
-									<select class=" form-control wide btn select2" name="ingredient">
+								<div class="input-group mb-3 col-md-4">
+									<input type="text" class="form-control" placeholder="Enter quantity and unit" name="quantity" id="quantity">
+									<select class="default-select form-control wide btn select2" name="ingredient" id="selectIngredient">
 										@foreach (var ingre in ingredients)
 										{
 											<option>@ingre.Name</option>
 										}
 									</select>
 								</div>
-								<div>
-									<button type="button" class="btn btn-rounded btn-primary btn-add-ingre" id="btnAlert" >
-										<span class="btn-icon-start text-primary">
-											<i class="fa fa-plus color-info"></i>
-										</span>Add
-									</button>
-								</div>
+							</div>
+							<div>
+								<button type="button" class="btn btn-rounded btn-primary btn-add-ingre" id="btnAdd">
+									<span class="btn-icon-start text-primary">
+										<i class="fa fa-plus color-info"></i>
+									</span>Add
+								</button>
 							</div>
 						</div>
 						<button type="submit" class="btn btn-primary" style="float: right;">Add</button>
@@ -136,13 +136,19 @@
 @section Script{
 	<script>
 		$(document).ready(function () {
-			$('.select2').select2();
-			$("#btnAlert").click(function () {
-				alert("yeah");
-				var newIngre = $(".input-group:last").clone(true); //clone div cuoi
+			//$('.select2').select2();
+			var count = 1;
+			$("#btnAdd").click(function () {
+				alert(count);
+				var newIngre = $(".input-group:last").clone(true); //clone input group cuoi 
 				newIngre.find("input").val("");
 				newIngre.find("select").prop("selectedIndex", 0);
 				$("#container").append(newIngre); // Thêm khối div mới vào container
+				var selectName = "ingredient" + count;
+				var quantityName = "quantity" +count;
+				$('#selectIngredient').attr('name', selectName);
+				$('#quantity').attr('name', selectName);
+				count++;
 			});
 		});
 	</script>
