--- a/Views/Home/AboutUs.cshtml
+++ b/Views/Home/AboutUs.cshtml
@@ -351,7 +351,9 @@
         </div>
     </section>
     <section class="elementor-section elementor-top-section elementor-element elementor-element-22e7cbb elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="22e7cbb" data-element_type="section" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
-        <div class="elementor-background-overlay" ></div>
+        <div class="elementor-background-overlay" >
+            <img style="height:530px ;width:100%" src="https://point.moxcreative.com/yumma/wp-content/uploads/sites/2/2022/04/ingredients-for-cooking.jpg" />
+        </div>
         <div class="elementor-container elementor-column-gap-default"style="margin-bottom:50px">
             <div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-e31ca3c elementor-invisible" data-id="e31ca3c" data-element_type="column" data-settings="{&quot;animation&quot;:&quot;fadeInLeft&quot;}">
                 <div class="elementor-widget-wrap elementor-element-populated" style="width: 50%;
@@ -407,12 +409,13 @@
                 </div>
             </div>
             <div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-adaaff3" data-id="adaaff3" data-element_type="column">
-                <div class="elementor-widget-wrap elementor-element-populated">
+                <div class="elementor-widget-wrap elementor-element-populated" style="display:flex;gap:15px">
                     <div class="elementor-element elementor-element-bb1a53d elementor-view-stacked elementor-position-left elementor-shape-circle elementor-mobile-position-top elementor-vertical-align-top elementor-invisible elementor-widget elementor-widget-icon-box" data-id="bb1a53d" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInRight&quot;}" data-widget_type="icon-box.default">
                         <div class="elementor-widget-container" style="padding: 20px;
     background-color: #ffff;
     border-radius: 10px;">
-                            <link rel="stylesheet" href="https://point.moxcreative.com/yumma/wp-content/plugins/elementor/assets/css/widget-icon-box.min.css">		<div class="elementor-icon-box-wrapper">
+                            <link rel="stylesheet" href="https://point.moxcreative.com/yumma/wp-content/plugins/elementor/assets/css/widget-icon-box.min.css">	
+                            <div class="elementor-icon-box-wrapper">
                                 <div class="elementor-icon-box-icon">
                                     <span class="elementor-icon elementor-animation-" style="background-color:#d54215">
                                       <i class="fa-solid fa-lightbulb"></i>     
@@ -794,10 +797,10 @@
                     <section class="elementor-section elementor-inner-section elementor-element elementor-element-7776597 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="7776597" data-element_type="section">
                         <div class="elementor-container elementor-column-gap-default">
                             <div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-baa3908 animated-slow elementor-invisible" data-id="baa3908" data-element_type="column" data-settings="{&quot;background_background&quot;:&quot;classic&quot;,&quot;animation&quot;:&quot;fadeInLeft&quot;}">
-                                <div class="elementor-widget-wrap elementor-element-populated" style="background-color:#FFF;margin-right:10px">
+                                <div class="elementor-widget-wrap elementor-element-populated" style="border-radius:10px;display:flex;gap:30px ;background-color:#FFF;margin-right:10px;padding:60px">
                                     <div class="elementor-element elementor-element-c3da9e1 elementor-view-default elementor-position-top elementor-mobile-position-top elementor-widget elementor-widget-icon-box" data-id="c3da9e1" data-element_type="widget" data-widget_type="icon-box.default">
                                         <div class="elementor-widget-container">
-                                            <div class="elementor-icon-box-wrapper">
+                                            <div class="elementor-icon-box-wrapper" style="text-align:left">
                                                 <div class="elementor-icon-box-icon">
                                                     <span class="elementor-icon elementor-animation-">
                                                         <i aria-hidden="true" class="material-icons md-alternate_email" data-md-icon="alternate_email"></i>
@@ -851,10 +854,10 @@
                                 </div>
                             </div>
                             <div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-fcf03c3 animated-slow elementor-invisible" data-id="fcf03c3" data-element_type="column" data-settings="{&quot;background_background&quot;:&quot;classic&quot;,&quot;animation&quot;:&quot;fadeInRight&quot;}">
-                                <div class="elementor-widget-wrap elementor-element-populated" style="background-color:#FFF ;margin-left:10px">
+                                <div class="elementor-widget-wrap elementor-element-populated" style="border-radius:10px;background-color:#FFF ;margin-left:10px;display:flex;gap:30px ;padding:60px">
                                     <div class="elementor-element elementor-element-9593aaa elementor-view-default elementor-position-top elementor-mobile-position-top elementor-widget elementor-widget-icon-box" data-id="9593aaa" data-element_type="widget" data-widget_type="icon-box.default">
                                         <div class="elementor-widget-container">
-                                            <div class="elementor-icon-box-wrapper">
+                                            <div class="elementor-icon-box-wrapper" style="    text-align: left;">
                                                 <div class="elementor-icon-box-icon">
                                                     <span class="elementor-icon elementor-animation-">
                                                         <i aria-hidden="true" class="material-icons md-support_agent" data-md-icon="support_agent"></i>
