--- a/Views/Home/JoinContributor.cshtml
+++ b/Views/Home/JoinContributor.cshtml
@@ -5,8 +5,11 @@
 	<section class="elementor-section elementor-top-section elementor-element elementor-element-66c23da elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="66c23da" data-element_type="section" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
 		<div class="elementor-background-overlay"></div>
 		<div class="elementor-container elementor-column-gap-default">
-			<div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-7161192 elementor-invisible" data-id="7161192" data-element_type="column" data-settings="{&quot;animation&quot;:&quot;fadeInRight&quot;}">
-				<div class="elementor-widget-wrap elementor-element-populated">
+			<div style="    display: flex;
+    justify-content: flex-end; margin-bottom:100px" class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-7161192 elementor-invisible" data-id="7161192" data-element_type="column" data-settings="{&quot;animation&quot;:&quot;fadeInRight&quot;}">
+				<div style="    display: flex;
+    width: 950px;
+    gap: 20px;" class="elementor-widget-wrap elementor-element-populated">
 					<div class="elementor-element elementor-element-9c744a6 elementor-widget elementor-widget-heading" data-id="9c744a6" data-element_type="widget" data-widget_type="heading.default">
 						<div class="elementor-widget-container">
 							<style>
@@ -41,7 +44,8 @@
 
 								.elementor-widget-heading .elementor-heading-title.elementor-size-xxl {
 									font-size: 59px
-								}</style><h6 class="elementor-heading-title elementor-size-default">Join Contributor</h6>
+								}</style>
+								<h6 class="elementor-heading-title elementor-size-default">Join Contributor</h6>
 						</div>
 					</div>
 					<div class="elementor-element elementor-element-f776abb elementor-widget elementor-widget-heading" data-id="f776abb" data-element_type="widget" data-widget_type="heading.default">
@@ -104,9 +108,9 @@
 		</div>
 	</section>
 	<section class="elementor-section elementor-top-section elementor-element elementor-element-f23a5d7 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="f23a5d7" data-element_type="section">
-		<div class="elementor-container elementor-column-gap-default">
+		<div class="elementor-container elementor-column-gap-default" >
 			<div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-7641cb9" data-id="7641cb9" data-element_type="column">
-				<div class="elementor-widget-wrap elementor-element-populated">
+				<div style="width: 90%;" class="elementor-widget-wrap elementor-element-populated">
 					<div class="elementor-element elementor-element-fd8f06a elementor-invisible elementor-widget elementor-widget-heading" data-id="fd8f06a" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInLeft&quot;}" data-widget_type="heading.default">
 						<div class="elementor-widget-container">
 							<h6 class="elementor-heading-title elementor-size-default">Benefits</h6>
@@ -190,8 +194,9 @@
 			<div class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-a43e06b" data-id="a43e06b" data-element_type="column">
 				<div class="elementor-widget-wrap elementor-element-populated">
 					<div class="elementor-element elementor-element-18dff14 elementor-invisible elementor-widget elementor-widget-image" data-id="18dff14" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;zoomIn&quot;}" data-widget_type="image.default">
-						<div class="elementor-widget-container">
-							<img decoding="async" fetchpriority="high" width="1080" height="720" src="~/wp-content/uploads/sites/2/2022/04/happy-young-couple-cooking-together-in-the-kitchen-at-home.jpg" class="attachment-full size-full wp-image-376" alt="Happy young couple cooking together in the kitchen at home" srcset="https://point.moxcreative.com/yumma/wp-content/uploads/sites/2/2022/04/happy-young-couple-cooking-together-in-the-kitchen-at-home.jpg 1080w, https://point.moxcreative.com/yumma/wp-content/uploads/sites/2/2022/04/happy-young-couple-cooking-together-in-the-kitchen-at-home-300x200.jpg 300w, https://point.moxcreative.com/yumma/wp-content/uploads/sites/2/2022/04/happy-young-couple-cooking-together-in-the-kitchen-at-home-1024x682.jpg 1024w, https://point.moxcreative.com/yumma/wp-content/uploads/sites/2/2022/04/happy-young-couple-cooking-together-in-the-kitchen-at-home-768x512.jpg 768w, https://point.moxcreative.com/yumma/wp-content/uploads/sites/2/2022/04/happy-young-couple-cooking-together-in-the-kitchen-at-home-1536x1024.jpg 1536w, https://point.moxcreative.com/yumma/wp-content/uploads/sites/2/2022/04/happy-young-couple-cooking-together-in-the-kitchen-at-home-800x533.jpg 800w" sizes="(max-width: 1080px) 100vw, 1080px" />
+						<div class="elementor-widget-container" style="  height: 505px;
+    width: 749px">
+							<img style="width:100%;height:100% ;border-radius: 10px 0px 0px 10px;" decoding="async" fetchpriority="high" width="1080" height="720" src="~/wp-content/uploads/sites/2/2022/04/happy-young-couple-cooking-together-in-the-kitchen-at-home.jpg" class="attachment-full size-full wp-image-376" alt="Happy young couple cooking together in the kitchen at home" srcset="https://point.moxcreative.com/yumma/wp-content/uploads/sites/2/2022/04/happy-young-couple-cooking-together-in-the-kitchen-at-home.jpg 1080w, https://point.moxcreative.com/yumma/wp-content/uploads/sites/2/2022/04/happy-young-couple-cooking-together-in-the-kitchen-at-home-300x200.jpg 300w, https://point.moxcreative.com/yumma/wp-content/uploads/sites/2/2022/04/happy-young-couple-cooking-together-in-the-kitchen-at-home-1024x682.jpg 1024w, https://point.moxcreative.com/yumma/wp-content/uploads/sites/2/2022/04/happy-young-couple-cooking-together-in-the-kitchen-at-home-768x512.jpg 768w, https://point.moxcreative.com/yumma/wp-content/uploads/sites/2/2022/04/happy-young-couple-cooking-together-in-the-kitchen-at-home-1536x1024.jpg 1536w, https://point.moxcreative.com/yumma/wp-content/uploads/sites/2/2022/04/happy-young-couple-cooking-together-in-the-kitchen-at-home-800x533.jpg 800w" sizes="(max-width: 1080px) 100vw, 1080px" />
 						</div>
 					</div>
 				</div>
@@ -203,9 +208,11 @@
 			<div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-ca77032" data-id="ca77032" data-element_type="column">
 				<div class="elementor-widget-wrap elementor-element-populated">
 					<section class="elementor-section elementor-inner-section elementor-element elementor-element-64f0689 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="64f0689" data-element_type="section">
-						<div class="elementor-container elementor-column-gap-default">
-							<div class="elementor-column elementor-col-100 elementor-inner-column elementor-element elementor-element-a027521 elementor-invisible" data-id="a027521" data-element_type="column" data-settings="{&quot;animation&quot;:&quot;fadeInUp&quot;}">
-								<div class="elementor-widget-wrap elementor-element-populated">
+						<div class="elementor-container elementor-column-gap-default" style="    display: flex;
+    justify-content: center;">
+							<div style="width:633px" class="elementor-column elementor-col-100 elementor-inner-column elementor-element elementor-element-a027521 elementor-invisible" data-id="a027521" data-element_type="column" data-settings="{&quot;animation&quot;:&quot;fadeInUp&quot;}">
+								<div class="elementor-widget-wrap elementor-element-populated" style="    display: flex;
+    text-align: center;">
 									<div class="elementor-element elementor-element-30b70de elementor-widget elementor-widget-heading" data-id="30b70de" data-element_type="widget" data-widget_type="heading.default">
 										<div class="elementor-widget-container">
 											<h6 class="elementor-heading-title elementor-size-default">Testimonial</h6>
@@ -230,7 +237,7 @@
 							<link rel="stylesheet" href="~/wp-content/plugins/elementor-pro/assets/css/widget-carousel.min.css">		<div class="elementor-swiper">
 								<div class="elementor-main-swiper swiper-container">
 									<div class="swiper-wrapper">
-										<div class="swiper-slide">
+										<div style="background-color:#ffff;border-radius:10px" class="swiper-slide">
 											<div class="elementor-testimonial">
 												<div class="elementor-testimonial__content">
 													<div class="elementor-testimonial__text">
@@ -245,7 +252,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="swiper-slide">
+										<div style="background-color:#ffff;border-radius:10px" class="swiper-slide">
 											<div class="elementor-testimonial">
 												<div class="elementor-testimonial__content">
 													<div class="elementor-testimonial__text">
@@ -260,7 +267,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="swiper-slide">
+										<div style="background-color:#ffff;border-radius:10px" class="swiper-slide">
 											<div class="elementor-testimonial">
 												<div class="elementor-testimonial__content">
 													<div class="elementor-testimonial__text">
@@ -284,14 +291,14 @@
 			</div>
 		</div>
 	</section>
-	<section class="elementor-section elementor-top-section elementor-element elementor-element-ac2f4f2 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="ac2f4f2" data-element_type="section">
+	<section style="margin:100px" class="elementor-section elementor-top-section elementor-element elementor-element-ac2f4f2 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="ac2f4f2" data-element_type="section">
 		<div class="elementor-container elementor-column-gap-default">
 			<div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-56bb92b" data-id="56bb92b" data-element_type="column">
 				<div class="elementor-widget-wrap elementor-element-populated">
 					<section class="elementor-section elementor-inner-section elementor-element elementor-element-110be5d elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="110be5d" data-element_type="section" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
-						<div class="elementor-container elementor-column-gap-default">
+						<div class="elementor-container elementor-column-gap-default" style="display:flex;align-items:center;width: 95%;border-radius:10px ; background-color:#ffff">
 							<div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-6f63125" data-id="6f63125" data-element_type="column">
-								<div class="elementor-widget-wrap elementor-element-populated">
+								<div class="elementor-widget-wrap elementor-element-populated" style="    padding: 3em 4em 3em 4em;">
 									<div class="elementor-element elementor-element-d370435 elementor-widget elementor-widget-heading" data-id="d370435" data-element_type="widget" data-widget_type="heading.default">
 										<div class="elementor-widget-container">
 											<h6 class="elementor-heading-title elementor-size-default">Join us</h6>
@@ -318,7 +325,9 @@
 							<div class="elementor-column elementor-col-50 elementor-inner-column elementor-element elementor-element-b9dfa7a" data-id="b9dfa7a" data-element_type="column">
 								<div class="elementor-widget-wrap elementor-element-populated">
 									<div class="elementor-element elementor-element-57a2e72 elementor-widget elementor-widget-image" data-id="57a2e72" data-element_type="widget" data-widget_type="image.default">
-										<div class="elementor-widget-container">
+										<div class="elementor-widget-container" style="    position: absolute;
+    bottom: -155px;
+    width: 90%;">
 											<img decoding="async" width="720" height="560" src="~/wp-content/uploads/sites/2/2022/04/img_1.png" class="attachment-large size-large wp-image-430" alt="" srcset="https://point.moxcreative.com/yumma/wp-content/uploads/sites/2/2022/04/img_1.png 720w, https://point.moxcreative.com/yumma/wp-content/uploads/sites/2/2022/04/img_1-300x233.png 300w" sizes="(max-width: 720px) 100vw, 720px" />
 										</div>
 									</div>
